cabal-version:      2.4
name:               toy-json
version:            0.2.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Data.ToyJson

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , attoparsec
    , base        ^>=4.16.4.0
    , scientific
    , text

  hs-source-dirs:   src
  ghc-options:      -Wall
  default-language: Haskell2010

test-suite toy-json-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -Wall
  main-is:          test.hs
  build-depends:
    , attoparsec
    , base         ^>=4.16.4.0
    , filepath
    , tasty
    , tasty-hunit
    , text
    , toy-json
